# BQ-Emulator

./: Cargo.toml  README.md
benches/: performance_bench.rs
docs/: conceptos_teoricos.md  ejemplos_practicos.md
src/: emulator.rs  gates.rs  lib.rs  main.rs  qubit.rs
