[package]
name = "quantum_emulator"
version = "0.1.0"
edition = "2021"

[lib]
name = "quantum_emulator"
path = "src/lib.rs"

[[bin]]
name = "quantum_emulator"
path = "src/main.rs"

[dependencies]
ndarray = "0.15"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "performance_bench"
harness = false
path = "benches/performance_bench.rs"
